Related-posts: removed id="featured-thumbnail" (it's not correct duplicate ids) Search input - added aria-label Text color contrast change: .post-date-publishable

--- a/www/wp-content/themes/publishable-mag/style.css
+++ b/www/wp-content/themes/publishable-mag/style.css
@@ -692,7 +692,7 @@ article header {
     font-weight: 400;
     text-transform: uppercase;
     margin: 0;
-    color: #a2a2a2;
+    color: #575766;
     font-size: 13px;
 	/*vertical-align: bottom;  salko */
 }
